fix: add note about the watch command

--- a/docs/tutorials/create-an-application/security/admin-area.mdx
+++ b/docs/tutorials/create-an-application/security/admin-area.mdx
@@ -49,7 +49,7 @@ So, what we want to achieve here is the following:
 - if the user is allowed to access the Car Manufacturers module, then make the menu item visible
 - otherwise, if the user isn't allowed to access it, keep the menu item hidden
 
-Note that when we say "has access", specifically in this case, we're going to check whether the user at least has the "read" permission.
+Note that when we say "has access", specifically in this case, we're going to check if the user can read Car Manufacturer entries.
 
 The code for these menu items is located in the scaffolded [`packages/car-manufacturers/admin-app/src/menus.tsx`](https://github.com/webiny/webiny-examples/tree/master/create-an-application/securing-your-application/code/packages/car-manufacturers/admin-app/src/menus.tsx) file. So, in there, we can add the following code:
 
@@ -109,6 +109,16 @@ In order to conditionally render the Car Manufacturers menu items, we are using 
 
 :::tip
 If you're curious about the `CarManufacturersPermission` type, check its definition in [packages/car-manufacturers/admin-app/src/types.ts:24](https://github.com/webiny/webiny-examples/tree/master/create-an-application/securing-your-application/code/packages/car-manufacturers/admin-app/src/types.ts#L24).
+:::
+
+:::info
+In order to actually compile the code changes we're about to make and see them in browser, we need to run the following Webiny CLI command:
+
+```bash
+yarn webiny watch apps/admin --env dev
+```
+
+To learn more, check out the [Use the Watch Command](/docs/how-to-guides/development/use-watch-command) guide.
 :::
 
 As you may have noticed, we're using the exact same logic and code, that we previously used while trying to secure the `getCarManufacturer` GraphQL resolver function. The only thing that's different is the way we fetch the currently logged in identity's permission. Here, we are using the `useSecurity` React hook in order to first get the identity, and then, via the `getPermission` method, the `car-manufacturers` permission.
