--- a/docs/tutorials/create-an-application/security/introduction.mdx
+++ b/docs/tutorials/create-an-application/security/introduction.mdx
@@ -187,6 +187,15 @@ export default {
     }
 } as AdminAppPermissionRendererPlugin;
 ```
+:::info
+In order to actually compile the code changes we're about to make and see them in browser, we need to run the following Webiny CLI command:
+
+```bash
+yarn webiny watch apps/admin --env dev
+```
+
+To learn more, check out the [Use the Watch Command](/docs/how-to-guides/development/use-watch-command) guide.
+:::
 
 Feel free to copy and paste the shown code into your project and use it as a starting point. And, after you do that, just make sure that the plugin is actually registered in [`apps/admin/code/src/plugins/index.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/apps/admin/code/src/plugins/index.ts), otherwise no change will appear in your browser.
 
