fix: add note about non-existing "permissions" folder

--- a/docs/tutorials/create-an-application/security/introduction.mdx
+++ b/docs/tutorials/create-an-application/security/introduction.mdx
@@ -197,7 +197,9 @@ yarn webiny watch apps/admin --env dev
 To learn more, check out the [Use the Watch Command](/docs/how-to-guides/development/use-watch-command) guide.
 :::
 
-Feel free to copy and paste the shown code into your project and use it as a starting point. And, after you do that, just make sure that the plugin is actually registered in [`apps/admin/code/src/plugins/index.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/apps/admin/code/src/plugins/index.ts), otherwise no change will appear in your browser.
+Feel free to copy and paste the shown code into your project and use it as a starting point. Note that the `permissions` folder is a new folder that we created, it wasn't initially there.
+
+After you do that, just make sure that the plugin is actually registered in [`apps/admin/code/src/plugins/index.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/apps/admin/code/src/plugins/index.ts), otherwise no change will appear in your browser.
 
 If you've been following the previous two tutorials, then you can simply import it via the [`packages/car-manufacturers/admin-app/src/index.ts`](https://github.com/webiny/webiny-examples/blob/master/create-an-application/securing-your-application/code/packages/car-manufacturers/admin-app/src/index.ts) file:
 
