--- a/docs/tutorials/create-an-application/security/introduction.mdx
+++ b/docs/tutorials/create-an-application/security/introduction.mdx
@@ -197,7 +197,10 @@ yarn webiny watch apps/admin --env dev
 To learn more, check out the [Use the Watch Command](/docs/how-to-guides/development/use-watch-command) guide.
 :::
 
-Feel free to copy and paste the shown code into your project and use it as a starting point. Note that the `permissions` folder is a new folder that we created, it wasn't initially there.
+Feel free to copy and paste the shown code into your project and use it as a starting point. When doing that, please note the following:
+
+- the `permissions` folder is a new folder that we created, it wasn't initially there
+- the code uses a custom [`directions_car-24px.svg`](https://github.com/webiny/webiny-examples/tree/master/create-an-application/securing-your-application/code/packages/car-manufacturers/admin-app/src/assets) SVG icon which you'll also want to copy into your project (otherwise the build will fail)
 
 After you do that, just make sure that the plugin is actually registered in [`apps/admin/code/src/plugins/index.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/apps/admin/code/src/plugins/index.ts), otherwise no change will appear in your browser.
 
