--- a/docs/tutorials/create-an-application/security/admin-area.mdx
+++ b/docs/tutorials/create-an-application/security/admin-area.mdx
@@ -53,10 +53,13 @@ Note that when we say "has access", specifically in this case, we're going to ch
 
 The code for these menu items is located in the scaffolded [`packages/car-manufacturers/admin-app/src/menus.tsx`](https://github.com/webiny/webiny-examples/tree/master/create-an-application/securing-your-application/code/packages/car-manufacturers/admin-app/src/menus.tsx) file. So, in there, we can add the following code:
 
-```tsx title="packages/car-manufacturers/admin-app/src/menus.tsx" {4,6,7,9,10,16-39}
+```tsx title="packages/car-manufacturers/admin-app/src/menus.tsx" {4-5,7,9,10,12,13,19-44}
 import React from "react";
 import { AdminMenuPlugin } from "@webiny/app-admin/types";
+
+// Note that we've changed the icon (this one is more appropriate).
 import { ReactComponent as Icon } from "./assets/directions_car-24px.svg";
+
 import { useSecurity } from "@webiny/app-security";
 
 // We use this when specifying the return types of the getPermission function call (below).
@@ -66,40 +69,42 @@ import { FullAccessPermission } from "@webiny/app-security/types";
 import { CarManufacturersPermission } from "./types";
 
 export default (): AdminMenuPlugin => ({
-  type: "admin-menu",
-  name: "admin-menu-car-manufacturers",
-  render({ Menu, Item }) {
-    const { identity } = useSecurity();
+    type: "admin-menu",
+    name: "admin-menu-car-manufacturers",
+    render({ Menu, Item }) {
+        const { identity } = useSecurity();
 
-    // We get the "car-manufacturers" permission from current identity (logged in user).
-    const permission = identity.getPermission<CarManufacturersPermission | FullAccessPermission>(
-      "cms.content-models"
-    );
+        // We get the "car-manufacturers" permission from current identity (logged in user).
+        const permission = identity.getPermission<
+            CarManufacturersPermission | FullAccessPermission
+        >("car-manufacturers");
 
-    if (!permission) {
-      return null;
+        if (!permission) {
+            return null;
+        }
+
+        // Note that the received permission object can also be `{ name: "*" }`. If so, that
+        // means we are dealing with the super admin, who has unlimited access.
+        let hasAccess = permission.name === "*";
+        if (!hasAccess) {
+            // If not super admin, let's check if we have the "r" in the `rwd` property.
+            hasAccess =
+                permission.name === "car-manufacturers" &&
+                permission.rwd &&
+                permission.rwd.includes("r");
+        }
+
+        // Finally, if current identity doesn't have access, we immediately exit.
+        if (!hasAccess) {
+            return null;
+        }
+
+        return (
+            <Menu name="menu-car-manufacturers" label={"Car Manufacturers"} icon={<Icon />}>
+                <Item label={"Car Manufacturers"} path={"/car-manufacturers"} />
+            </Menu>
+        );
     }
-
-    // Note that the received permission object can also be `{ name: "*" }`. If so, that
-    // means we are dealing with the super admin, who has unlimited access.
-    let hasAccess = permission.name === "*";
-    if (!hasAccess) {
-      // If not super admin, let's check if we have the "r" in the `rwd` property.
-      hasAccess =
-        permission.name === "car-manufacturers" && permission.rwd && permission.rwd.includes("r");
-    }
-
-    // Finally, if current identity doesn't have access, we immediately exit.
-    if (!hasAccess) {
-      return null;
-    }
-
-    return (
-      <Menu name="menu-car-manufacturers" label={"Car Manufacturers"} icon={<Icon />}>
-        <Item label={"Car Manufacturers"} path={"/car-manufacturers"} />
-      </Menu>
-    );
-  }
 });
 ```
 
