fix: update code

--- a/docs/tutorials/create-an-application/security/admin-area.mdx
+++ b/docs/tutorials/create-an-application/security/admin-area.mdx
@@ -203,8 +203,14 @@ For example, let's hide the New Car Manufacturer button, for users that aren't a
 
 To do that, let's jump to the `CarManufacturersDataList` React component ([`packages/car-manufacturers/admin-app/src/views/CarManufacturersDataList.tsx`](https://github.com/webiny/webiny-examples/tree/master/create-an-application/securing-your-application/code/packages/car-manufacturers/admin-app/src/views/CarManufacturersDataList.tsx)), in which we're going to wrap the `ButtonSecondary` component with the `SecureView` component. The following code shows how we can do that (for brevity, some of the code was excluded):
 
-```tsx title="packages/car-manufacturers/admin-app/src/views/CarManufacturersDataList.tsx" {4,23-47,57-58}
+```tsx title="packages/car-manufacturers/admin-app/src/views/CarManufacturersDataList.tsx" {4-6,10,29-53,63-64}
 import React, { useCallback, useEffect, useMemo } from "react";
+(...)
+
+// We also imported CarManufacturersPermission and FullAccessPermission types.
+import { CarManufacturerItem, DataListChildProps, CarManufacturersPermission } from "../types";
+import { FullAccessPermission } from "@webiny/app-security/types";
+
 (...)
 
 import { SecureView } from "@webiny/app-security/components";
