--- a/docs/changelog/5.6.0.mdx
+++ b/docs/changelog/5.6.0.mdx
@@ -14,9 +14,9 @@ This document highlights the most important fixes, improvements, and features, t
 Please check the [Webiny 5.6.0 migration guide](/docs/how-to-guides/upgrade-webiny/5.5.0-to-5.6.0) for the upgrade steps.
 :::
 
+<!-- TODO: feel free to push this item to the bottom of the list -->
 ## File Manager
 
-### Uploading Files With Different Extensions([#1540](https://github.com/webiny/webiny-js/pull/1540))
+### Fixed Uploading Files With Less Standard Extensions([#1577](https://github.com/webiny/webiny-js/pull/1577))
 
-The brand new `webiny watch` command brings local development experience to a whole new level!
-
+When in File Manager, uploading files with a less standard file extension would fail. This is no longer the case.
