wip: update introduction

--- a/docs/key-topics/security-framework/introduction.mdx
+++ b/docs/key-topics/security-framework/introduction.mdx
@@ -8,14 +8,14 @@ description: Learn how security works in Webiny.
 
 :::tip What you'll learn
 
-- what is a security framework
-- what are the main moving parts of the security framework
+- what is Webiny Security Framework
+- the main concepts behind the framework
 
 :::
 
-The security framework is a thin application layer that allows you to handle _authentication_ and _authorization_ using plugins. It is present on both API side, and React side of Webiny apps. Security in Webiny revolves around permissions.
+Webiny Security Framework is a thin application layer that allows you to handle _authentication_ and _authorization_ using plugins. It is present on both API side and React side of Webiny apps. It's main purpose is to provide a simple and flexible system to work with permissions.
 
-Webiny apps, as well as your custom apps, request permissions from the security layer when the code reaches certain points in your business logic and needs to check if current identity is authorized (has permission) to execute certain operations.
+Webiny apps, as well as your custom apps, request permissions from the security framework when the code reaches certain points in your business logic and needs to check if current _identity_ is _authorized_ (has _permission_) to execute certain operations.
 
 ## What's Authentication?
 
@@ -34,7 +34,7 @@ are scenarios when having identity is not necessary.
 
 Keep in mind that `identity` and `user` are not the same thing. A `user` is a superset of `identity`, meaning, it will have a lot more information associated with it. That information is often related to your project's business logic (user profile, payment info, addresses).
 
-`Identity` doesn't need to contain any of that information. It's enough for identity to only have an ID (be it UUID, username, or email). As long as it's verified, that's all the security layer cares about.
+`Identity` doesn't need to contain any of that information. It's enough for identity to only have an ID (be it UUID, username, or email). As long as it's verified, that's all the security framework cares about.
 
 :::
 
