feat: add PB changes to the v5.6.0 changelog

--- a/docs/changelog/5.6.0.mdx
+++ b/docs/changelog/5.6.0.mdx
@@ -6,6 +6,10 @@ keywords: ["webiny", "version", "5.6.0", "changelog"]
 description: See what's new in Webiny version 5.6.0.
 ---
 
+import CenteredImage from "../mdxComponents/centeredImage";
+import pbNavigatorDemo from "./5.6.0/pb-navigator-block-reorder.gif";
+import pbElementVisibilitySettingDemo from "./5.6.0/pb-navigator-visibility.gif";
+
 # Changes
 
 This document highlights the most important fixes, improvements, and features, that were introduced in Webiny `5.6.0`.
@@ -20,3 +24,21 @@ Please check the [Webiny 5.6.0 migration guide](/docs/how-to-guides/upgrade-webi
 ### Fixed Uploading Files With Less Standard Extensions([#1577](https://github.com/webiny/webiny-js/pull/1577))
 
 When in File Manager, uploading files with a less standard file extension would fail. This is no longer the case.
+
+## Page Builder
+
+### Add Visibility Element Setting in the Editor([#1579](https://github.com/webiny/webiny-js/pull/1579))
+
+Now, you can set the visibility of an element using the _Visibility setting_ in the page editor sidebar.
+
+<CenteredImage alt="Webiny Page Builder visibility element setting" src={pbElementVisibilitySettingDemo} />
+
+### Add Navigator in the Editor([#1579](https://github.com/webiny/webiny-js/pull/1579))
+
+Quickly see the hierarchy structure of the page in a tree view.
+You can also:
+- reorder block by drag and drop
+- select and unhide elements that are set hidden previously
+- quickly jump between elements
+
+<CenteredImage alt="Webiny Page Builder navigator demo" src={pbNavigatorDemo} />
