fix: move Headless CMS pages to Webiny Applications section

--- a/docs/how-to-guides/webiny-applications/headless-cms/create-a-content-model-form-layout.mdx
+++ b/docs/how-to-guides/webiny-applications/headless-cms/create-a-content-model-form-layout.mdx
@@ -6,10 +6,10 @@ keywords: ["headless cms", "reactjs", "form", "layout", "content model"]
 description: How to create a custom form layout for content model data entry.
 ---
 
-import CenteredImage from "../../mdxComponents/centeredImage";
-import defaultLayout from "../assets/headless-cms/create-a-content-model-form-layout/defaultLayout.png";
-import customLayout from "../assets/headless-cms/create-a-content-model-form-layout/customLayout.png";
-import customElements from "../assets/headless-cms/create-a-content-model-form-layout/customElements.png";
+import CenteredImage from "../../../mdxComponents/centeredImage";
+import defaultLayout from "../../assets/headless-cms/create-a-content-model-form-layout/defaultLayout.png";
+import customLayout from "../../assets/headless-cms/create-a-content-model-form-layout/customLayout.png";
+import customElements from "../../assets/headless-cms/create-a-content-model-form-layout/customElements.png";
 
 :::info Can I use this?
 This feature is available since **v5.1.0**.
